--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
                     <div class="home__data grid">
                         <h1 class="home__title">
                             Hi, I'm Sai <br>
-                            Frontend Developer <br>
-                            Based in Hyderabad<br>
+                            Frontend Developer
                         </h1>
 
                         <div class="home__blob grid">
